--- a/Data/wathoartey.html
+++ b/Data/wathoartey.html
@@ -1,7 +1,7 @@
 <!Doctype = html>
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io/Number-Systems-in-computers/css/foralldata.css"></link>
 </head>
 <body>
 <div id="google_translate_element" align = "center"></div>
@@ -22,7 +22,7 @@ function googleTranslateElementInit() {
 <p>
 <ol>
 <li>Decimal number system.<br>
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\base10.jpg"></img></li>
+<img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/base10.jpg?raw=true"></img></li>
 <li>Binary number system.<br>
 <img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\base2.jpg"></img></li>
 <li>Octal number system<br>
