--- a/Data/wathoartey.html
+++ b/Data/wathoartey.html
@@ -24,14 +24,14 @@ function googleTranslateElementInit() {
 <li>Decimal number system.<br>
 <img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/base10.jpg?raw=true"></img></li>
 <li>Binary number system.<br>
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\base2.jpg"></img></li>
+<img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/base2.jpg?raw=true"></img></li>
 <li>Octal number system<br>
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\base8.jpg"></img></li>
+<img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/base8.jpg?raw=true"></img></li>
 <li>HexaDecimal number system<br>
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\base16.jpg"></img></li>
+<img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/base16.jpg?raw=true"></img></li>
 </ol>
 <h2>Thus if they are put in a table with the range of HexaDecimal being the maximum then:</h2>
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\table.jpg"></img></li>
+<img src = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/Images/table.jpg?raw=true"></img></li>
 </p>
 <p>
 <h2>How do you convert from one form to another ?</h2>
