--- a/Data/context.html
+++ b/Data/context.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://github.com/Ayush69420504/Number-Systems-in-computers/blob/master-branch/css/foralldata.css"></link>
 </head>
 <body>
 <div id="google_translate_element" align = "center"></div>
