--- a/Data/Octaltohexdecimal.html
+++ b/Data/Octaltohexdecimal.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io/Number-Systems-in-computers/css/foralldata.css"></link>
 <body>
 <div id="google_translate_element" align = "center"></div>
 <script type="text/javascript">
