--- a/Data/Downloads.html
+++ b/Data/Downloads.html
@@ -1,7 +1,7 @@
 <!Doctype = html>
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io/Number-Systems-in-computers/css/foralldata.css"></link>
 </head>
 <body>
 <a href = "C:\Users\ayush\Desktop\Number-System-in-computers\code\">Code</a>
