--- a/Data/Octaltohexdecimal.html
+++ b/Data/Octaltohexdecimal.html
@@ -19,16 +19,16 @@ function googleTranslateElementInit() {
 </ol>
 <button onclick = "changetocode();" width = "25%" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" width = "25%" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Octaltohexdecimal.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io/Number-Systems-in-computers/code/src/Octaltohexdecimal.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\octaltohexdecimal.jpg";
+	document.getElementById('screen').src = "https://github.com//Ayush69420504//Number-Systems-in-computers//blob//master-branch//Images//octaltohexdecimal.jpg?raw=true";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Octaltohexdecimal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Octaltohexdecimal.java";
 }
 </script>
 </body>
