--- a/Data/Octaltohexdecimal.html
+++ b/Data/Octaltohexdecimal.html
@@ -24,7 +24,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://github.com//Ayush69420504//Number-Systems-in-computers//blob//master-branch//Images//octaltohexdecimal.jpg?raw=true";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//octaltohexdecimal.jpg";
 }
 function changetocode()
 {
