--- a/Data/MainAIO.html
+++ b/Data/MainAIO.html
@@ -28,16 +28,16 @@ commands.</li>
 </ol>
 <button onclick = "changetocode();" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\MainAIO.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io/Number-Systems-in-computers/code/src/MainAIO.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\mainaio.mp4";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//mainaio.mp4";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\MainAIO.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//MainAIO.java";
 }
 </script>
 </body>
