--- a/Data/Hexdecimaltobinary.html
+++ b/Data/Hexdecimaltobinary.html
@@ -27,16 +27,16 @@ to find the binary string in correct order.</li>
 </ol>
 <button onclick = "changetocode();" width = "25%" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" width = "25%" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Hexdecimaltobinary.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Hexdecimaltobinary.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\hexdecimaltobinary.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//hexdecimaltobinary.jpg";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Hexdecimaltobinary.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Hexdecimaltobinary/java";
 }
 </script>
 </body>
