--- a/Data/Fractionaldecimaltobinary.html
+++ b/Data/Fractionaldecimaltobinary.html
@@ -22,16 +22,16 @@ function googleTranslateElementInit() {
 </ol>
 <button onclick = "changetocode();" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Decimaltobinaryfloatingpoint.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Decimaltobinaryfloatingpoint.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\fractionaldecimaltobinary.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//fractionaldecimaltobinary.jpg";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Decimaltobinaryfloatingpoint.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Decimaltobinaryfloatingpoint.java";
 }
 </script>
 </body>
