--- a/Data/Fractionalbinarytodecimal.html
+++ b/Data/Fractionalbinarytodecimal.html
@@ -26,16 +26,16 @@ error when doing in a number variable</li>
 </ol>
 <button onclick = "changetocode();" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Binarytodecimalfractional.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytodecimalfractional.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\fractionalbinarytodecimal.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//fractionalbinarytodecimal.jpg";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Binarytodecimalfractional.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytodecimalfractional.java";
 }
 </script>
 </body>
