--- a/Data/Binarytooctal.html
+++ b/Data/Binarytooctal.html
@@ -28,16 +28,16 @@ decimal changing algorithm within the while loop in the main while loop</li>
 </ol>
 <button onclick = "changetocode();" width = "25%" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" width = "25%" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Binarytooctal.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytooctal.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\binarytooctal.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//binarytooctal.jpg";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Binarytooctal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytooctal.java";
 }
 </script>
 </body>
