--- a/Data/Binarytohexdecimal.html
+++ b/Data/Binarytohexdecimal.html
@@ -31,16 +31,16 @@ decimal value.</li>
 </ol>
 <button onclick = "changetocode();" width = "25%" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" width = "25%" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Binarytohexdecimal.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytohexdecimal.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\binarytohexdecimal.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//binarytodecimal.java";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Binarytohexdecimal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytohexdecimal.java";
 }
 </script>
 </body>
