--- a/Data/Binarytodecimal.html
+++ b/Data/Binarytodecimal.html
@@ -22,16 +22,16 @@ It is pretty easy if you know how to convert your thoughts and english algorithm
 <p>Also for the power changing, we can use Math.pow(2,p) and explicit convert it to long and make a value initialized as p to which 1 is added with succesive loops and thus each binary digit gets it proper decimal value.</p> 
 <button onclick = "changetocode();" width = "25%" style = "width: 37.5%;">Click here to see the code</button>
 <button onclick = "changetooutput();" width = "25%" style = "width: 37.5%;">Click here to see the output</button><br>
-<iframe width = "75%" height = "50%" src = "C:\Users\ayush\Desktop\Number-System-in-computers\code\src\Binarytodecimal.java" id = "screen"
+<iframe width = "75%" height = "50%" src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Binarytodecimal.java" id = "screen"
 style = "background-color: white; font-family: 'times new roman'; border: 1px solid black;"></iframe>
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\Images\\binarytodecimal.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//decimaltobinary.jpg";
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "C:\\Users\\ayush\\Desktop\\Number-System-in-computers\\code\\src\\Binarytodecimal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Decimaltobinary.java";
 }
 </script>
 </body>
