--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!Doctype = html>
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\forindex.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io//Number-Systems-in-computers//css//forindex.css"></link>
 <title>Number-System-in-Computers</title>
 </head>
 <body>
 <script>
-alert("This is hosted on Git hub. \nSorry as i do not have money to purchase domain. \nSite link = https://Ayush69420504.github.io/Tesla-Roadster/");
+alert("This is hosted on Git hub. \nSorry as i do not have money to purchase domain. \nSite link = https://Ayush69420504.github.io/Number-Systems-in-computers/");
 </script>
 <div class = "Title">
-<a href = "C:\Users\ayush\Desktop\Number-System-in-computers\Main.html" target = "Main">
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\home.jpg" align = "left" width = "120" height = "120"></img>
+<a href = "https://ayush69420504.github.io//Number-Systems-in-computers//Main.html" target = "Main">
+<img src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//home.jpg" align = "left" width = "120" height = "120"></img>
 </a>
-<a href = "C:\Users\ayush\Desktop\Number-System-in-computers\Contactme.html" target = "Main">
-<img src = "C:\Users\ayush\Desktop\Number-System-in-computers\Images\contactme.jpg" align = "right" width = "120" height = "120"></img>
+<a href = "https://ayush69420504.github.io//Number-Systems-in-computers//Contactme.html" target = "Main">
+<img src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//contactme.jpg" align = "right" width = "120" height = "120"></img>
 </a>
 <h1 align = "center">Ascii number base converter</h1>
 <h2 align = "center">Number System in computers</h2>
 </div>
 <hr>
-<iframe src = "C:\Users\ayush\Desktop\Number-System-in-computers\List.html" width = "15%" height = "90%" align = "left"
+<iframe src = "https://ayush69420504.github.io//Number-Systems-in-computers//List.html" width = "15%" height = "90%" align = "left"
 style = "border-color:Black" name = "List"></iframe>
-<iframe src = "C:\Users\ayush\Desktop\Number-System-in-computers\Main.html" width = "84%" height = "90%" align = "right"
+<iframe src = "https://ayush69420504.github.io//Number-Systems-in-computers//Home.html" width = "84%" height = "90%" align = "right"
 style = "border-color:Black" name = "Main"></iframe>
-<h2 align = "right">Last updated on 15/11/2020.</h2>
+<h2 align = "right">Last updated on 16/11/2020.</h2>
 </body>
 </html>
