--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!Doctype = html>
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io//Number-Systems-in-computers//css//foralldata.css"></link>
 <body>
 <div id="google_translate_element" align = "center"></div>
 <script type="text/javascript">
