--- a/Contactme.html
+++ b/Contactme.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel = "stylesheet" href = "C:\Users\ayush\Desktop\Number-System-in-computers\foralldata.css"></link>
+<link rel = "stylesheet" href = "https://ayush69420504.github.io//Number-Systems-in-computers//css//foralldata.css"></link>
 </head>
 <body>
 <h3>Email: ayush.slg2006@gmail.com</h3>
