--- a/Data/Decimaltobinary.html
+++ b/Data/Decimaltobinary.html
@@ -32,7 +32,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//decimaltobinary.jpg";
 }
 function changetocode()
 {
