--- a/Data/Octaltodecimal.html
+++ b/Data/Octaltodecimal.html
@@ -29,7 +29,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//octaltodecimal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//octaltodecimal.jpg";
 }
 function changetocode()
 {
