--- a/Data/Octaltobinary.html
+++ b/Data/Octaltobinary.html
@@ -35,7 +35,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io/Number-Systems-in-computers//Images//octaltobinary.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io/Number-Systems-in-computers//Images//octaltobinary.jpg";
 }
 function changetocode()
 {
