--- a/Data/Hexdecimaltobinary.html
+++ b/Data/Hexdecimaltobinary.html
@@ -36,7 +36,7 @@ function changetooutput()
 }
 function changetocode()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Hexdecimaltobinary/java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//code//src//Hexdecimaltobinary.java";
 }
 </script>
 </body>
