--- a/Data/Binarytohexdecimal.html
+++ b/Data/Binarytohexdecimal.html
@@ -36,7 +36,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//binarytodecimal.java";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//binarytodecimal.jpg";
 }
 function changetocode()
 {
