--- a/Data/Hexdecimaltooctal.html
+++ b/Data/Hexdecimaltooctal.html
@@ -24,7 +24,7 @@ style = "background-color: white; font-family: 'times new roman'; border: 1px so
 <script>
 function changetooutput()
 {
-	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images.hexdecimaltooctal.jpg";
+	document.getElementById('screen').src = "https://ayush69420504.github.io//Number-Systems-in-computers//Images//hexdecimaltooctal.jpg";
 }
 function changetocode()
 {
